--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IMC - Sua Saúde</title>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+
     <style>
         main {
             display: flex;
@@ -18,7 +20,7 @@
 
         .container {
             flex-direction: column;
-            width: 300px;
+            width: 400px;
             border: 2px black solid;
             padding: 30px;
             text-align: center;
@@ -31,6 +33,10 @@
         .container button {
             display: block;
             margin: 5px auto;
+        }
+
+        #result {
+            display: block;
         }
     </style>
 </head>
@@ -51,11 +57,17 @@
 
             <button
             id="btn"
-            type="submit">
+            type="button"
+            class="btn btn-secondary">
             Calcular</button>
         </form>
+
+        <div id="result" class="alert alert-success" role="alert">
+        </div>
     </main>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js
+    "></script>
     <script src="main.js"></script>
 </body>
 
