--- a/index.html
+++ b/index.html
@@ -8,48 +8,7 @@
     <title>IMC - Sua Saúde</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
-
-    <style>
-
-        body{
-            background-color: #000;
-            color: #FFF;
-        }
-        main {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            width: 100vw;
-            height: 100vh;
-        }
-
-        .container {
-            flex-direction: column;
-            width: 550px;
-            border: 2px grey solid;
-            padding: 30px;
-            text-align: center;
-            margin-bottom: 10px;
-        }
-
-        .container input {
-            margin: 8px 4em;
-        }
-
-        .container button {
-            display: block;
-            margin: 5px auto;
-        }
-
-        .hiddenContent {
-            display: hidden;
-        }
-
-        #result {
-            display: block;
-        }
-    </style>
+    <link rel="stylesheet" href="./main.css">
 </head>
 
 <body>
@@ -86,6 +45,13 @@
             Seu resultado aqui. 
         </div>
     </main>
+
+    <article>
+        <h1>A importância da quantidade certa de agúa no nosso dia</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate tempore assumenda incidunt optio! Nemo distinctio alias inventore a recusandae consectetur consequuntur, doloribus asperiores expedita nisi aut illum harum nobis nihil?
+        </p>
+    </article>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js
     "></script>
