--- a/index.html
+++ b/index.html
@@ -47,10 +47,37 @@
     </main>
 
     <article>
-        <h1>A importância da quantidade certa de agúa no nosso dia</h1>
+        <h2>A utilidade do IMC na prática</h2>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate tempore assumenda incidunt optio! Nemo distinctio alias inventore a recusandae consectetur consequuntur, doloribus asperiores expedita nisi aut illum harum nobis nihil?
+            O que o Índice de Massa Corporal tem a dizer sobre a nossa saúde? Criado em 1832 pelo matemático Lambert Quételet, o Índice de Massa Corporal, conhecido pela sigla IMC, é um cálculo simples que permite medir se alguém está ou não com o peso ideal. Ele aponta se o peso está adequado ou se está abaixo ou acima do peso, porém o IMC apresenta suas limitações e nunca deve ser usado como único padrão para declarar um diagnóstico sem levar em consideração outros fatores.
         </p>
+
+        <dl>
+            <dt>Tecido muscular e tecido adiposo</dt>
+            <dd>
+                Significa que uma pessoa com grande quantidade de massa muscular pode ser considerada obesa quando analisamos apenas a proporção entre peso e altura.
+            </dd>
+        </dl>
+
+        
+        <dl>
+            <dt>Proporção do corpo</dt>
+            <dd>
+                Um exemplo são de pessoas que possuem pernas curtas que terão o IMC aumentado.
+            </dd>
+        </dl>
+
+        
+        <dl>
+            <dt>Homems e Mulheres</dt>
+            <dd>
+                Naturalmente possuem padrões de estatura e porcentagem de gordura diferentes. Outro caso é que o IMC não abrange o caso de mulheres grávidas.
+            </dd>
+        </dl>
+
+        <span>
+            Referências: <a href="https://brasilescola.uol.com.br/saude-na-escola/limitacoes-imc.htm">Brasil Escola</a>
+        </span>
     </article>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js
