--- a/index.html
+++ b/index.html
@@ -75,8 +75,45 @@
             </dd>
         </dl>
 
+        <div id="table">
+            <table class="table table-sm">
+                <thead>
+                  <tr>
+                    <th scope="col">Valor IMC</th>
+                    <th scope="col">Classificação IMC</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Menor que 18.5</td>
+                    <td>Abaixo do peso</td>
+                  </tr>
+                  <tr>
+                    <td>De 18.6 a 24.9</td>
+                    <td>Está no peso ideal</td>
+                  </tr>
+                  <tr>
+                    <td>De 25.0 a 29.9</td>
+                    <td>Levemente acima do peso</td>
+                  </tr>
+                  <tr>
+                    <td>De 30.0 a 34.9</td>
+                    <td>Obesidade de grau 1</td>
+                  </tr>
+                  <tr>
+                    <td>De 35.0 a 39.9</td>
+                    <td>Obesidade de grau 2</td>
+                  </tr>
+                  <tr>
+                    <td>Maior que 40.0</td>
+                    <td>Obesidade de grau 3</td>
+                  </tr>
+                </tbody>
+              </table>
+        </div>
+
         <span>
-            Referências: <a href="https://brasilescola.uol.com.br/saude-na-escola/limitacoes-imc.htm">Brasil Escola</a>
+            <p>Referências:  <a href="https://brasilescola.uol.com.br/saude-na-escola/limitacoes-imc.htm">Brasil Escola</a></p>
         </span>
     </article>
 
