--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 <body>
 
     <header>
-        <div>
+        <div class="headline">
             <a href="https://nickolasedu.github.io/Sua-Saude/">
                 <button>Back</button>
             </a>
+
+            <h1>SuaSaúde</h1>
         </div>
     </header>
 
