--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 <body>
 
     <header>
-        <div class="headline">
+        <div class="headlineBtn">
             <a href="https://nickolasedu.github.io/Sua-Saude/">
                 <button>Back</button>
             </a>
+        </div>
 
+        <div class="headlineTxt">
             <h1>SuaSaúde</h1>
         </div>
     </header>
